# dtwm1-tugas-etl

./: .dockerignore  .env.example  .gitignore  Dockerfile  LAPORAN_ETL.md  README.md  analytical_queries.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
dags/: .gitkeep  __init__.py  dag_retail_etl_student.py
docs/: architecture.md  data-flow.md  setup-guide.md
include/schemas/: .gitkeep
include/sql/: .gitkeep  olap_schema.sql
plugins/: .gitkeep  __init__.py
scripts/: entrypoint.sh  init-db.sql
tasks/: 📚 Tugas — ETL Process.md
tests/: .gitkeep  __init__.py
